--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,16 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+:root {
+  --color-green: #16a34a;
+  --color-blue: #3b82f6;
+  --color-red: #dc2626;
+	--color-text-base: #334155;
+	--color-text-light: #33415595;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,6 +58,11 @@ table {
 }
 
 .App {
-  font-family: sans-serif;
+  font-family: 'Inter', sans-serif;
   text-align: center;
+	color: #334155;
+}
+
+b {
+	font-weight: 600;
 }
